--- a/.github/workflows/deployFrontend.yaml
+++ b/.github/workflows/deployFrontend.yaml
@@ -19,9 +19,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Instalar dependencias
+        working-directory:Frontend
         run: npm install
 
       - name: Compilar proyecto
+        working-directory:Frontend
         run: npm run build
 
       - name: Subir archivos al servidor
