[@ximena-ortiz] Frontend/dist Despliegue

--- a/.github/workflows/deployFrontend.yaml
+++ b/.github/workflows/deployFrontend.yaml
@@ -32,5 +32,5 @@ jobs:
           host: ${{ env.SERVER_IP }}
           username: root
           password: ${{ env.SERVER_PASSWORD }}
-          source: "dist/*"
+          source: "Frontend/dist/*"
           target: ${{ env.TARGET_PATH }}
