--- a/.github/workflows/deployFrontend.yaml
+++ b/.github/workflows/deployFrontend.yaml
@@ -26,6 +26,16 @@ jobs:
         working-directory: Frontend
         run: npm run build
 
+      - name: Limpiar contenido previo en servidor
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ env.SERVER_IP }}
+          username: root
+          password: ${{ env.SERVER_PASSWORD }}
+          port: 22
+          script: |
+            rm -rf /var/www/html/*
+            
       - name: Subir archivos al servidor
         uses: appleboy/scp-action@v0.1.7
         with:
