--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "frontend-construccion": "file:",
     "lucide-react": "^0.483.0",
     "next-themes": "^0.4.6",
