--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@playwright/test": "^1.52.0",
     "@types/node": "^22.13.10",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19.0.10",
