[@ximena-ortiz] Safety Api Key

--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -32,6 +32,8 @@ jobs:
         run: |
           bandit -r app/ --exclude app/tests
 
-      - name: 🔍 Run Safety
-        run: |
-          safety scan
+      - name: Run Safety (con salida detallada)
+        uses: pyupio/safety-action@v1
+        with:
+          api-key: ${{ secrets.SAFETY_API_KEY }}
+          args: --detailed-output
