--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -7,5 +7,6 @@ psycopg2-binary==2.9.10
 python-dotenv==1.1.0
 passlib[bcrypt]==1.7.4
 python-jose==3.4.0
-redis==5.2.1
-pydantic==1.10.7
+redis==6.0.0
+pydantic==2.11.4
+pydantic[email]==2.11.4
