--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -44,6 +44,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.19.1",
     "input-otp": "1.4.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
@@ -54,10 +55,12 @@
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^2.12.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
