--- a/Backend/requirements-dev.txt
+++ b/Backend/requirements-dev.txt
@@ -1,10 +1,27 @@
 -r requirements.txt
-pytest
-pytest-bdd
-locust
-black
-isort
-pytest-cov
-pytest-mock
-bandit
-safety
+
+# Testing frameworks
+pytest==8.2.1
+pytest-bdd==8.1.0
+pytest-cov==6.1.1
+pytest-mock==3.14.1
+
+# Code quality
+black==24.4.2
+isort==5.13.2
+bandit==1.7.7
+safety==3.2.0
+
+# Load testing
+locust==2.27.0
+
+# ML/IA & related
+transformers==4.41.2
+torch==2.3.0
+scikit-learn==1.5.0
+scipy==1.13.1
+numpy==1.26.4
+
+# Otros útiles
+regex==2024.5.15
+Pillow==10.3.0
